# ruma-federation-api

./: Cargo.toml
src/v1/: get_public_rooms.rs  get_server_version.rs
src/v2/: get_server_keys.rs
