[package]
authors = ["Jonas Platte <jplatte+git@posteo.de>"]
categories = ["api-bindings", "web-programming"]
description = "Types for the endpoints in the Matrix server-server API."
documentation = "https://docs.rs/ruma-federation-api"
edition = "2018"
homepage = "https://github.com/ruma/ruma-federation-api"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-federation-api"
readme = "README.md"
repository = "https://github.com/ruma/ruma-federation-api"
version = "0.0.1"

[dependencies]
js_int = "0.1.4"
ruma-api = { git = "https://github.com/ruma/ruma-api", branch = "event-json" }
ruma-events = { git = "https://github.com/ruma/ruma-events", branch = "event-json" }
ruma-identifiers = "0.16.0"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
